lib/gr/python/gr.py


def readimage(path):
  width = c_int()
  height = c_int()
  _data = POINTER(c_int)()
  __gr.gr_readimage(char(path), byref(width), byref(height), byref(_data))
  _type = (c_int * (width.value * height.value))
  data = _type.from_address(addressof(_data.contents))
  return [width.value, height.value, data]

def drawimage(xmin, xmax, ymin, ymax, width, height, data):
  _data = intarray(width*height, data)
  __gr.gr_drawimage(c_float(xmin), c_float(xmax), c_float(ymin), c_float(ymax),
                    c_int(width), c_int(height), _data)

def importgraphics(path):
  __gr.gr_importgraphics(char(path))

def setshadow(offsetx, offsety, blur):
  __gr.gr_setshadow(c_float(offsetx), c_float(offsety), c_float(blur))

def settransparency(alpha):
  __gr.gr_settransparency(c_float(alpha))

def setcoordxform(mat):
  _mat = floatarray(6, mat)
  __gr.gr_setcoordxform(_mat)
  
def begingraphics(path):
  __gr.gr_begingraphics(char(path))

def endgraphics():
  __gr.gr_endgraphics()

def mathtex(x, y, string):
  return __gr.gr_mathtex(c_float(x), c_float(y), char(string))

def beginselection(index, type):
  __gr.gr_beginselection(c_int(index), c_int(type))

def endselection():
  __gr.gr_endselection()

def moveselection(x, y):
  __gr.gr_moveselection(c_float(x), c_float(y))

def resizeselection(type, x, y):
  __gr.gr_resizeselection(c_int(type), c_float(x), c_float(y))

def inqbbox():
  xmin = c_float()
  xmax = c_float()
  ymin = c_float()
  ymax = c_float()
  __gr.gr_inqbbox(byref(xmin), byref(xmax), byref(ymin), byref(ymax))
  return [xmin.value, xmax.value, ymin.value, ymax.value]

if system() == 'Windows' :
  __gr = CDLL("S:\gr\libGR.dll")
else:
  __gr = CDLL("/usr/local/gr/lib/libGR.so")

__gr.gr_opengks.argtypes = [];
__gr.gr_closegks.argtypes = [];
__gr.gr_inqdspsize.argtypes = [POINTER(c_float), POINTER(c_float), POINTER(c_int), POINTER(c_int)];
__gr.gr_openws.argtypes = [c_int, c_char_p, c_int];
__gr.gr_closews.argtypes = [c_int];
__gr.gr_activatews.argtypes = [c_int];
__gr.gr_deactivatews.argtypes = [c_int];
__gr.gr_clearws.argtypes = [];
__gr.gr_updatews.argtypes = [];
__gr.gr_polyline.argtypes = [c_int, POINTER(c_float), POINTER(c_float)];
__gr.gr_polymarker.argtypes = [c_int, POINTER(c_float), POINTER(c_float)];
__gr.gr_text.argtypes = [c_float, c_float, c_char_p];
__gr.gr_fillarea.argtypes = [c_int, POINTER(c_float), POINTER(c_float)];
__gr.gr_cellarray.argtypes = [
  c_float, c_float, c_float, c_float, c_int, c_int, c_int, c_int, c_int, c_int, POINTER(c_int)];
__gr.gr_spline.argtypes = [c_int, POINTER(c_float), POINTER(c_float), c_int, c_int];
__gr.gr_gridit.argtypes = [c_int, POINTER(c_float), POINTER(c_float), POINTER(c_float), c_int, c_int];
__gr.gr_setlinetype.argtypes = [c_int];
__gr.gr_setlinewidth.argtypes = [c_float];
__gr.gr_setlinecolorind.argtypes = [c_int];
__gr.gr_setmarkertype.argtypes = [c_int];
__gr.gr_setmarkersize.argtypes = [c_float];
__gr.gr_setmarkercolorind.argtypes = [c_int];
__gr.gr_settextfontprec.argtypes = [c_int, c_int];
__gr.gr_setcharexpan.argtypes = [c_float];
__gr.gr_setcharspace.argtypes = [c_float];
__gr.gr_settextcolorind.argtypes = [c_int];
__gr.gr_setcharheight.argtypes = [c_float];
__gr.gr_setcharup.argtypes = [c_float, c_float];
__gr.gr_settextpath.argtypes = [c_int];
__gr.gr_settextalign.argtypes = [c_int, c_int];
__gr.gr_setfillintstyle.argtypes = [c_int];
__gr.gr_setfillstyle.argtypes = [c_int];
__gr.gr_setfillcolorind.argtypes = [c_int];
__gr.gr_setcolorrep.argtypes = [c_int, c_float, c_float, c_float];
__gr.gr_setwindow.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_inqwindow.argtypes = [POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)];
__gr.gr_setviewport.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_selntran.argtypes = [c_int];
__gr.gr_setclip.argtypes = [c_int];
__gr.gr_setwswindow.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_setwsviewport.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_createseg.argtypes = [c_int];
__gr.gr_copysegws.argtypes = [c_int];
__gr.gr_redrawsegws.argtypes = [];
__gr.gr_setsegtran.argtypes = [
  c_int, c_float, c_float, c_float, c_float, c_float, c_float, c_float];
__gr.gr_closeseg.argtypes = [];
__gr.gr_emergencyclosegks.argtypes = [];
__gr.gr_updategks.argtypes = [];
__gr.gr_setspace.argtypes = [c_float, c_float, c_int, c_int];
__gr.gr_inqspace.argtypes = [POINTER(c_float), POINTER(c_float), POINTER(c_int), POINTER(c_int)];
__gr.gr_setscale.argtypes = [c_int];
__gr.gr_inqscale.argtypes = [POINTER(c_int)];
__gr.gr_textext.argtypes = [c_float, c_float, c_char_p];
__gr.gr_inqtextext.argtypes = [c_float, c_float, c_char_p, POINTER(c_float), POINTER(c_float)];
__gr.gr_axes.argtypes = [c_float, c_float, c_float, c_float, c_int, c_int, c_float];
__gr.gr_grid.argtypes = [c_float, c_float, c_float, c_float, c_int, c_int];
__gr.gr_verrorbars.argtypes = [c_int, POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)];
__gr.gr_herrorbars.argtypes = [c_int, POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)];
__gr.gr_polyline3d.argtypes = [c_int, POINTER(c_float), POINTER(c_float), POINTER(c_float)];
__gr.gr_axes3d.argtypes = [
  c_float, c_float, c_float, c_float, c_float, c_float, c_int, c_int, c_int, c_float];
__gr.gr_titles3d.argtypes = [c_char_p, c_char_p, c_char_p];
__gr.gr_surface.argtypes = [c_int, c_int, POINTER(c_float), POINTER(c_float), POINTER(c_float), c_int];
__gr.gr_contour.argtypes = [
  c_int, c_int, c_int, POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float), c_int];
__gr.gr_setcolormap.argtypes = [c_int];
__gr.gr_colormap.argtypes = [];
__gr.gr_inqcolor.argtypes = [c_int, POINTER(c_int)];
__gr.gr_tick.argtypes = [c_float, c_float];
__gr.gr_adjustrange.argtypes = [POINTER(c_float), POINTER(c_float)];
__gr.gr_beginprint.argtypes = [c_char_p];
__gr.gr_beginprintext.argtypes = [c_char_p, c_char_p, c_char_p, c_char_p];
__gr.gr_endprint.argtypes = [];
__gr.gr_ndctowc.argtypes = [POINTER(c_float), POINTER(c_float)];
__gr.gr_wctondc.argtypes = [POINTER(c_float), POINTER(c_float)];
__gr.gr_drawrect.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_fillrect.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_drawarc.argtypes = [c_float, c_float, c_float, c_float, c_int, c_int];
__gr.gr_fillarc.argtypes = [c_float, c_float, c_float, c_float, c_int, c_int];
__gr.gr_setarrowstyle.argtypes = [c_int];
__gr.gr_drawarrow.argtypes = [c_float, c_float, c_float, c_float];
__gr.gr_readimage.argtypes = [c_char_p, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_int))];
__gr.gr_drawimage.argtypes = [c_float, c_float, c_float, c_float, c_int, c_int, POINTER(c_int)];
__gr.gr_importgraphics.argtypes = [c_char_p];
__gr.gr_setshadow.argtypes = [c_float, c_float, c_float];
__gr.gr_settransparency.argtypes = [c_float];
__gr.gr_setcoordxform.argtypes = [POINTER(c_float)];
__gr.gr_begingraphics.argtypes = [c_char_p];
__gr.gr_endgraphics.argtypes = [];
__gr.gr_mathtex.argtypes = [c_float, c_float, c_char_p];
__gr.gr_beginselection.argtypes = [c_int, c_int];
__gr.gr_endselection.argtypes = [];
__gr.gr_moveselection.argtypes = [c_float, c_float];
__gr.gr_resizeselection.argtypes = [c_int, c_float, c_float];
__gr.gr_inqbbox.argtypes = [POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)];

ASF_BUNDLED = 0
ASF_INDIVIDUAL = 1

NOCLIP = 0
CLIP = 1

COORDINATES_WC = 0
COORDINATES_NDC = 1

INTSTYLE_HOLLOW = 0
INTSTYLE_SOLID = 1
INTSTYLE_PATTERN = 2
INTSTYLE_HATCH = 3

TEXT_HALIGN_NORMAL = 0
TEXT_HALIGN_LEFT = 1
TEXT_HALIGN_CENTER = 2
TEXT_HALIGN_RIGHT = 3
TEXT_VALIGN_NORMAL = 0
TEXT_VALIGN_TOP = 1
TEXT_VALIGN_CAP = 2
TEXT_VALIGN_HALF = 3
TEXT_VALIGN_BASE = 4
TEXT_VALIGN_BOTTOM = 5

TEXT_PATH_RIGHT = 0
TEXT_PATH_LEFT = 1
TEXT_PATH_UP = 2
TEXT_PATH_DOWN = 3

TEXT_PRECISION_STRING = 0
TEXT_PRECISION_CHAR = 1
TEXT_PRECISION_STROKE = 2

LINETYPE_SOLID = 1
LINETYPE_DASHED = 2
LINETYPE_DOTTED = 3
LINETYPE_DASHED_DOTTED = 4
LINETYPE_DASH_2_DOT = -1
LINETYPE_DASH_3_DOT = -2
LINETYPE_LONG_DASH = -3
LINETYPE_LONG_SHORT_DASH = -4
LINETYPE_SPACED_DASH = -5
LINETYPE_SPACED_DOT = -6
LINETYPE_DOUBLE_DOT = -7
LINETYPE_TRIPLE_DOT = -8

MARKERTYPE_DOT = 1
MARKERTYPE_PLUS = 2
MARKERTYPE_ASTERISK = 3
MARKERTYPE_CIRCLE = 4
MARKERTYPE_DIAGONAL_CROSS = 5
MARKERTYPE_SOLID_CIRCLE = -1
MARKERTYPE_TRIANGLE_UP = -2
MARKERTYPE_SOLID_TRI_UP = -3
MARKERTYPE_TRIANGLE_DOWN = -4
MARKERTYPE_SOLID_TRI_DOWN = -5
MARKERTYPE_SQUARE = -6
MARKERTYPE_SOLID_SQUARE = -7
MARKERTYPE_BOWTIE = -8
MARKERTYPE_SOLID_BOWTIE = -9
MARKERTYPE_HOURGLASS = -10
MARKERTYPE_SOLID_HGLASS = -11
MARKERTYPE_DIAMOND = -12
MARKERTYPE_SOLID_DIAMOND = -13
MARKERTYPE_STAR = -14
MARKERTYPE_SOLID_STAR = -15
MARKERTYPE_TRI_UP_DOWN = -16
MARKERTYPE_SOLID_TRI_RIGHT = -17
MARKERTYPE_SOLID_TRI_LEFT = -18
MARKERTYPE_HOLLOW_PLUS = -19
MARKERTYPE_OMARK = -20

OPTION_X_LOG = 1
OPTION_Y_LOG = 2
OPTION_Z_LOG = 4
OPTION_FLIP_X = 8
OPTION_FLIP_Y = 16
OPTION_FLIP_Z = 32

OPTION_LINES = 0
OPTION_MESH = 1
OPTION_FILLED_MESH = 2
OPTION_Z_SHADED_MESH = 3
OPTION_COLORED_MESH = 4
OPTION_CELL_ARRAY = 5
OPTION_SHADED_MESH = 6

COLORMAP_UNIFORM = 0
COLORMAP_TEMPERATURE = 1
COLORMAP_GRAYSCALE = 2
COLORMAP_GLOWING = 3
COLORMAP_RAINBOW = 4
COLORMAP_GEOLOGIC = 5
COLORMAP_GREENSCALE = 6
COLORMAP_CYANSCALE = 7
COLORMAP_BLUESCALE = 8
COLORMAP_MAGENTASCALE = 9
COLORMAP_REDSCALE = 10
COLORMAP_FLAME = 11
COLORMAP_BROWNSCALE = 12
COLORMAP_USER_DEFINED = 13

FONT_TIMES_ROMAN = 101
FONT_TIMES_ITALIC = 102
FONT_TIMES_BOLD = 103
FONT_TIMES_BOLDITALIC = 104
FONT_HELVETICA = 105
FONT_HELVETICA_OBLIQUE = 106
FONT_HELVETICA_BOLD = 107
FONT_HELVETICA_BOLDOBLIQUE = 108
FONT_COURIER = 109
FONT_COURIER_OBLIQUE = 110
FONT_COURIER_BOLD = 111
FONT_COURIER_BOLDOBLIQUE = 112
FONT_SYMBOL = 113
FONT_BOOKMAN_LIGHT = 114
FONT_BOOKMAN_LIGHTITALIC = 115
FONT_BOOKMAN_DEMI = 116
FONT_BOOKMAN_DEMIITALIC = 117
FONT_NEWCENTURYSCHLBK_ROMAN = 118
FONT_NEWCENTURYSCHLBK_ITALIC = 119
FONT_NEWCENTURYSCHLBK_BOLD = 120
FONT_NEWCENTURYSCHLBK_BOLDITALIC = 121
FONT_AVANTGARDE_BOOK = 122
FONT_AVANTGARDE_BOOKOBLIQUE = 123
FONT_AVANTGARDE_DEMI = 124
FONT_AVANTGARDE_DEMIOBLIQUE = 125
FONT_PALATINO_ROMAN = 126
FONT_PALATINO_ITALIC = 127
FONT_PALATINO_BOLD = 128
FONT_PALATINO_BOLDITALIC = 129
FONT_ZAPFCHANCERY_MEDIUMITALIC = 130
FONT_ZAPFDINGBATS = 131

